--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,82 @@
 asgiref==3.6.0
+asttokens==2.1.0
 attrs==22.1.0
+backcall==0.2.0
 beautifulsoup4==4.11.1
+bleach==5.0.1
 bs4==0.0.1
+build==0.8.0
 certifi==2022.9.24
+cffi==1.15.1
 charset-normalizer==2.1.1
+commonmark==0.9.1
+cryptography==38.0.1
+debugpy==1.6.3
+decorator==5.1.1
 Django==4.1.5
 django-cors-headers==3.13.0
 django-environ==0.9.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+docutils==0.19
+entrypoints==0.4
 exceptiongroup==1.0.1
+executing==1.2.0
 idna==3.4
+importlib-metadata==5.0.0
 iniconfig==1.1.1
+ipykernel==6.17.1
+ipython==8.6.0
+jaraco.classes==3.2.3
+jedi==0.18.1
+jeepney==0.8.0
+jupyter_client==7.4.5
+jupyter_core==5.0.0
+keyring==23.9.3
+libxml2-python==2.10.2
+matplotlib-inline==0.1.6
+more-itertools==9.0.0
+nest-asyncio==1.5.6
 numpy==1.23.4
 opencv-python==4.6.0.66
 packaging==21.3
+pandas==1.5.1
+parso==0.8.3
+pep517==0.13.0
+pexpect==4.8.0
+pickleshare==0.7.5
+pkginfo==1.8.3
+platformdirs==2.5.3
 pluggy==1.0.0
+prompt-toolkit==3.0.32
+psutil==5.9.4
 psycopg2-binary==2.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py==1.11.0
+pycparser==2.21
+Pygments==2.13.0
 PyJWT==2.6.0
 pyparsing==3.0.9
 pytest==7.2.0
+python-dateutil==2.8.2
 pytz==2022.7
+pyzmq==24.0.1
+readme-renderer==37.2
 requests==2.28.1
+requests-toolbelt==0.10.1
+rfc3986==2.0.0
+rich==12.6.0
+SecretStorage==3.3.3
+six==1.16.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.3
+stack-data==0.6.1
 tomli==2.0.1
+tornado==6.2
+traitlets==5.5.0
+twine==4.0.1
 urllib3==1.26.12
+wcwidth==0.2.5
+webencodings==0.5.1
+zipp==3.10.0
